--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <li>
         <a href="#">My Classes</a>
         <ul>
-          <li><a href="#">Class 1</a></li>
-          <li><a href="#">Class 2</a></li>
+          <li><a href="https://class.daytonastate.edu/d2l/home/487729" target="_blank">COP4813</a></li>
+          <li><a href="https://class.daytonastate.edu/d2l/home/485745" target="_blank">COP4708</a></li>
         </ul>
       </li>
       <li>
