--- a/assignment1.html
+++ b/assignment1.html
@@ -4,20 +4,26 @@
   <meta charset="UTF-8">
   <meta name="description" content="Assignment 1 placeholder page.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Assignment 1</title>
+  <title>My Assignments</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="assignments.html">My Assignments</a></li>
+      <li><a href="assignment1.html">My Assignments</a></li>
     </ul>
   </nav>
 
   <main>
-    <h1>Assignment 1</h1>
+    <h1>My Assignments</h1>
     <p>This is a placeholder page for Assignment 1.</p>
+
+    <h2>External Assignments</h2>
+    <ul>
+      <li><a href="https://jsfiddle.net/peunq5zL/" target="_blank">JSFiddle Assignment 1</a></li>
+      <li><a href="https://jsfiddle.net/tsf1ko46/" target="_blank">JSFiddle Assignment 2</a></li>
+    </ul>
   </main>
 
   <footer>
