--- a/assignments.html
+++ b/assignments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Assignment 1 placeholder page.">
+  <meta name="description" content="Assignments page with links.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Assignments</title>
   <link rel="stylesheet" href="css/style.css">
@@ -11,13 +11,12 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="assignment1.html">My Assignments</a></li>
+      <li><a href="assignments.html">My Assignments</a></li>
     </ul>
   </nav>
 
   <main>
     <h1>My Assignments</h1>
-    <p>This is a placeholder page for Assignment 1.</p>
 
     <h2>External Assignments</h2>
     <ul>
