--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
   <nav aria-label="Main menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li>
-        <a href="assignments.html">My Assignments</a>
-        <ul>
-          <li><a href="assignment1.html">Assignment 1</a></li>
-          <li><a href="assignments.html">Assignment 2</a></li>
-        </ul>
-      </li>
+     <li>
+  <a href="assignments.html">My Assignments</a>
+  <ul>
+    <li><a href="assignment1.html">Assignment 1</a></li>
+    <li><a href="assignments.html">Assignment 2</a></li>
+    <li>
+      <a href="#">Assignment 6</a>
+      <ul>
+        <li><a href="cards.html">Drag and Drop Cards</a></li>
+      </ul>
+    </li>
+  </ul>
+</li>
+
       <li>
         <a href="#">My Classes</a>
         <ul>
