--- a/index.html
+++ b/index.html
@@ -12,24 +12,14 @@
   <nav aria-label="Main menu">
     <ul>
       <li><a href="index.html">Home</a></li>
-   <li>
+  <li>
   <a href="assignments.html">My Assignments</a>
   <ul>
     <li><a href="assignment1.html">Assignment 1</a></li>
     <li><a href="assignments.html">Assignment 2</a></li>
     <li><a href="a4.html">Assignment 4</a></li>
-    <li>
-      <a href="#">Assignment 5</a>
-      <ul>
-        <li><a href="a5.html">Assignment 5 - Spirograph</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="#">Assignment 6</a>
-      <ul>
-        <li><a href="cards.html">Drag and Drop Cards</a></li>
-      </ul>
-    </li>
+    <li><a href="a5.html">Assignment 5</a></li>
+    <li><a href="cards.html">Assignment 6</a></li>
   </ul>
 </li>
 
