--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="a4.html">Assignment 4</a></li>
     <li><a href="a5.html">Assignment 5</a></li>
     <li><a href="cards.html">Assignment 6</a></li>
+    <li><a href="a9.html">Assignment 9</a></li>
   </ul>
 </li>
 
