--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <body>
 
- 
   <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
 
   <nav aria-label="Main menu">
     <ul class="nav-links">
@@ -48,18 +46,23 @@
     </ul>
   </nav>
 
-
   <header>
     <h1>Welcome to My COP4813 Website</h1>
     <p>This site is for demonstrating my web programming skills throughout the semester.</p>
   </header>
-
 
   <main>
     <section>
       <h2>About Me</h2>
       <img src="images/me.jpg" alt="A representative picture of me">
       <p>Hello! I am a student in COP4813. This site will act as both a project portfolio and a mini-resume where I can demonstrate HTML, CSS, and JavaScript skills. Over time, I will add links to all my assignments here.</p>
+    </section>
+
+    <!-- NEW LIGHTHOUSE SECTION -->
+    <section>
+      <h2>Lighthouse Mobile Audit</h2>
+      <img src="images/lighthouse.png" alt="Lighthouse performance screenshot" class="lighthouse-img">
+      <p>This screenshot shows the Lighthouse report results for my mobile-friendly home page.</p>
     </section>
   </main>
 
